adds a simple tabindex

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/error-message/error-message.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/error-message/error-message.component.html
@@ -5,7 +5,7 @@
     <div class="govuk-error-summary__body">
       <ul class="govuk-list govuk-error-summary__list">
         <li>
-          <a routerLink="." [fragment]="error.fieldId">{{error.description | rpxTranslate}}</a>
+          <a routerLink="." tabindex="0" [fragment]="error.fieldId">{{error.description | rpxTranslate}}</a>
         </li>
       </ul>
     </div>
