--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/case-editor/case-edit-page/case-edit-page.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/case-editor/case-edit-page/case-edit-page.html
@@ -23,7 +23,7 @@
   <div *ngFor="let validationError of validationErrors" class="govuk-error-summary__body">
     <ul class="govuk-list govuk-error-summary__list">
       <li>
-        <a (click)="navigateToErrorElement(validationError.id)" class="validation-error">
+        <a (click)="navigateToErrorElement(validationError.id)" tabindex="0" class="validation-error">
           {{ validationError.message | rpxTranslate: getRpxTranslatePipeArgs(validationError.label | rpxTranslate): null }}
         </a>
       </li>
