Add additional check on uploaded file type

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/document/write-document-field.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/document/write-document-field.html
@@ -12,7 +12,7 @@
 
   <div style='position:relative'>
     <div [id]="createElementId('fileInputWrapper')" (click)="fileSelectEvent()" (keyup)="fileSelectEvent()"></div>
-    <input class="form-control bottom-30" [id]="id()" type="file" (keydown.Tab)="fileValidationsOnTab()" (change)="fileChangeEvent($event)"
+    <input class="form-control bottom-30" [id]="id()" type="file" (keydown.Tab)="fileValidationsOnTab()" (change)="fileChangeEvent($event, caseField.field_type.regular_expression)"
            accept="{{caseField.field_type.regular_expression}}" #fileInput/>
   </div>
 </div>
