--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/search-result/search-result.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/search-result/search-result.component.html
@@ -26,15 +26,15 @@
   </caption>
   <thead>
     <tr scope="row">
-      <th *ngIf="selectionEnabled" class="govuk-table__checkbox" scope="col">
+      <td *ngIf="selectionEnabled" class="govuk-table__checkbox">
         <div class="govuk-checkboxes__item">
           <input class="govuk-checkboxes__input" id="select-all" name="select-all" type="checkbox" (change)="selectAll()" [checked]="allOnPageSelected()" [disabled]="!canAnyBeShared()" />
-          <label class="govuk-label govuk-checkboxes__label" for="select-all">
+          <label class="govuk-label govuk-checkboxes__label" for="select-all" [attr.aria-labelledby]="'select-all'">
           </label>
         </div>
-      </th>
+      </td>
       <th *ngFor="let col of resultView.columns" class="search-result-column-header"
-        [attr.aria-sort]="isSortAscending(col) === null ? null : (isSortAscending(col) ? 'ascending' : 'descending')">
+        [attr.aria-sort]="isSortAscending(col) === null ? null : (isSortAscending(col) ? 'ascending' : 'descending')" scope="col">
         <div>
           <div class="search-result-column-label" (click)="sort(col)" (keyup)="noop()">
             {{col.label | rpxTranslate}}
@@ -44,7 +44,7 @@
           </div>
         </div>
       </th>
-      <th *ngIf="activityEnabled()" style="width: 110px;">&ZeroWidthSpace;</th>
+      <th *ngIf="activityEnabled()" style="width: 110px;" scope="col">&ZeroWidthSpace;</th>
     </tr>
   </thead>
 
@@ -56,7 +56,7 @@
           <div class="govuk-checkboxes__item">
             <input class="govuk-checkboxes__input" id="select-{{ result.case_id }}" name="select-{{ result.case_id }}"
               type="checkbox" (change)="changeSelection(result)" [checked]="isSelected(result)" [disabled]="!canBeShared(result)" />
-            <label class="govuk-label govuk-checkboxes__label" for="select-{{ result.case_id }}">
+            <label class="govuk-label govuk-checkboxes__label" for="select-{{ result.case_id }}" [attr.aria-labelledby]="'select-' + result.case_id">
             </label>
           </div>
         </td>
@@ -92,7 +92,7 @@
           <div class="govuk-checkboxes__item">
             <input class="govuk-checkboxes__input" id="select-{{ result.case_id }}" name="select-{{ result.case_id }}"
               type="checkbox" (change)="changeSelection(result)" [checked]="isSelected(result)" [disabled]="!canBeShared(result)" (keyup)="onKeyUp($event, result)" />
-            <label class="govuk-label govuk-checkboxes__label" for="select-{{ result.case_id }}">
+            <label class="govuk-label govuk-checkboxes__label" for="select-{{ result.case_id }}" [attr.aria-labelledby]="'select-' + result.case_id">
             </label>
           </div>
         </td>
