--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-write/query-write-raise-query/query-write-raise-query.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-write/query-write-raise-query/query-write-raise-query.component.html
@@ -10,7 +10,7 @@
 
   <hr>
 
-  <div class="govuk-!-margin-bottom-4">
+  <div class="govuk-!-margin-bottom-4" *ngIf="showForm">
     <div [formGroup]="formGroup">
       <div>
         <div class="govuk-form-group" [ngClass]="{'govuk-form-group--error': submitted && formGroup.get('subject').hasError('required')}">
