--- a/projects/ccd-case-ui-toolkit/src/lib/components/header/header-bar/header-bar.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/components/header/header-bar/header-bar.html
@@ -4,7 +4,7 @@
     <div class="header-global" [class.header-logo]="isSolicitor">
       <div *ngIf="isSolicitor">
         <a href="https://www.gov.uk" title="Go to the GOV.UK homepage" id="logo" class="content" style="margin-left: 0px;">
-          <img src="/img/gov.uk_logotype_crown_invert_trans.png?0.23.0" width="36" height="32" alt=""> {{'GOV.UK' | rpxTranslate}}
+          <img src="/img/gov.uk_logotype_crown_invert_trans.png?0.23.0" width="36" height="32" alt=""> {{'GOV.UK'}}
         </a>
       </div>
       <div class="global-header" *ngIf="!isSolicitor">
