error message added for query already responded to

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-details/query-details.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-details/query-details.component.html
@@ -1,3 +1,7 @@
+<cut-alert type="error" *ngIf="hasRespondedToQuery()">
+  <ng-container>{{message}}</ng-container>
+</cut-alert>
+
 <ng-container *ngIf="query">
   <br/>
   <p>
