--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-write/query-write-respond-to-query/query-write-respond-to-query.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-write/query-write-respond-to-query/query-write-respond-to-query.component.html
@@ -9,11 +9,12 @@
   </div>
 
   <div>
-    <ccd-query-details [query]="queryItem"></ccd-query-details>
+    <ccd-query-details [query]="queryItem"
+      (hasResponded)="hasResponded($event)"></ccd-query-details>
   </div>
 </div>
 
-<div class="query-respond">
+<div class="query-respond" *ngIf="!hasRespondedToQuery">
   <div>
     <h1 class="govuk-heading-m">
       {{ queryCreateContext === queryCreateContextEnum.RESPOND ? 'Respond to a query' : 'Ask a follow-up question' | rpxTranslate }}
