prevent user from responding multiple times to a query

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-write/query-write-respond-to-query/query-write-respond-to-query.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-write/query-write-respond-to-query/query-write-respond-to-query.component.html
@@ -10,6 +10,7 @@
 
   <div>
     <ccd-query-details [query]="queryItem"
+      [totalNumberOfQueryChildren]="totalNumberOfQueryChildren"
       (hasResponded)="hasResponded($event)"></ccd-query-details>
   </div>
 </div>
