--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/read-query-management-field.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/read-query-management-field.component.html
@@ -11,6 +11,7 @@
     [query]="query"
     (backClicked)="showQueryList = true"
     [caseId]="caseId"
+    [caseQueriesCollections]="caseQueriesCollections"
   ></ccd-query-details>
 
   <ng-container *ngIf="!isCaseworker()">
