--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-write/query-write-respond-to-query/query-write-respond-to-query.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-write/query-write-respond-to-query/query-write-respond-to-query.component.html
@@ -9,13 +9,12 @@
   </div>
 
   <div>
-    <ccd-query-details [query]="queryItem"
+    <ccd-query-details [query]="queryItemDisplay"
       [totalNumberOfQueryChildren]="totalNumberOfQueryChildren"
       (hasResponded)="hasResponded($event)"></ccd-query-details>
   </div>
 </div>
-
-<div class="query-respond" *ngIf="showForm">
+<div class="query-respond">
   <div *ngIf="!hasRespondedToQuery">
     <h1 class="govuk-heading-m">
       {{ queryCreateContext === queryCreateContextEnum.RESPOND ? 'Respond to a query' : 'Ask a follow-up question' | rpxTranslate }}
