--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/components/case-file-view-folder/case-file-view-folder-toggle/case-file-view-folder-toggle.component.scss
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/components/case-file-view-folder/case-file-view-folder-toggle/case-file-view-folder-toggle.component.scss
@@ -1,5 +1,5 @@
-.sort-button-icon {
+.toggle-button-icon {
   display: inline-block;
+  margin-right: 2px;
   height: 20px;
-  margin-right: -2px;
 }
