exui-673 - patch expandAll logic for toggling case file folders

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/components/case-file-view-folder/case-file-view-folder.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/components/case-file-view-folder/case-file-view-folder.component.html
@@ -16,7 +16,7 @@
   <div class="document-folders-header__title">
     Documents ({{ documentCount }})
   </div>
-  <div>
+  <div class="document-folders-header__flex">
     <ccd-case-file-view-folder-toggle
       (expandAll)="expandAll($event)"
       (collapseAll)="collapseAll($event)"
