remove file name translation

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/document/write-document-field.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/document/write-document-field.html
@@ -33,7 +33,7 @@
         >{{'Choose file' | rpxTranslate}}</label
       >
       <span class="form-control bottom-30">
-        <span>{{fileName | rpxTranslate}}</span>
+        <span>fileName</span>
       </span>
     </div>
     <input
