updates the label gen function again

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/date/write-date-field.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/date/write-date-field.html
@@ -9,6 +9,7 @@
       {{(dateControl.errors | ccdFirstError:caseField.label)}}
     </span>
     <cut-date-input [id]="id()"
+                    [labelPrefix]="caseField.label | ccdFieldLabel"
                     [isDateTime]="isDateTime()"
                     [mandatory]="caseField | ccdIsMandatory"
                     [isInvalid]="dateControl.errors && (dateControl.dirty || dateControl.touched)"
