--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/components/case-file-view-folder/case-file-view-folder-toggle/case-file-view-folder-toggle.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/components/case-file-view-folder/case-file-view-folder-toggle/case-file-view-folder-toggle.component.html
@@ -1,13 +1,5 @@
-<ccd-case-file-view-overlay-menu
-  [title]="'Toggle list'"
-  [menuItems]="overlayMenuItems"
-  [(isOpen)]="isOpen"
->
+<ccd-case-file-view-overlay-menu [title]="'Toggle list'" [menuItems]="overlayMenuItems" [(isOpen)]="isOpen">
   <ng-container trigger>
-    <img
-      class="toggle-button-icon" 
-      src="/assets/images/folder-open.png"
-      alt="Toggle list"
-    />
+    <img class="toggle-button-icon" src="/assets/images/folder-open.png" alt="Toggle list" />
   </ng-container>
 </ccd-case-file-view-overlay-menu>
