exui-2748 - fix for remove dialog contrast while dark mode active

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/dialogs/action-dialog.component.scss
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/dialogs/action-dialog.component.scss
@@ -8,6 +8,11 @@
   cursor: pointer;
   color: #6e7071;
 }
+@media (prefers-color-scheme: dark) {
+  .dialog-title, .dialog-info {
+    color: #000000;
+  }
+}
 .dialog-header {
   text-align: right;
 }
