--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/pagination/pagination.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/pagination/pagination.component.html
@@ -8,8 +8,8 @@
           [attr.aria-label]="previousLabel + ' ' + screenReaderPageLabel | rpxTranslate">
           {{ previousLabel | rpxTranslate }} <span class="show-for-sr">{{ screenReaderPageLabel | rpxTranslate }}</span>
         </a>
-        <span *ngIf="p.isFirstPage()">
-          {{ previousLabel | rpxTranslate }} <span class="show-for-sr">{{ 'Page ' + screenReaderPageLabel | rpxTranslate }}</span>
+        <span *ngIf="p.isFirstPage()" [attr.aria-label]="previousLabel + ' ' + screenReaderPageLabel | rpxTranslate">
+          {{ previousLabel | rpxTranslate }} <span class="show-for-sr">{{ screenReaderPageLabel | rpxTranslate }}</span>
         </span>
       </li>
       <li class="small-screen">
@@ -18,13 +18,13 @@
       <li [class.current]="p.getCurrent() === page.value" [class.ellipsis]="page.label === '...'"
         *ngFor="let page of p.pages">
         <a tabindex="0" (keyup.enter)="p.setCurrent(page.value)" (click)="p.setCurrent(page.value)"
-          *ngIf="p.getCurrent() !== page.value">
+          *ngIf="p.getCurrent() !== page.value" [attr.aria-label]="page.label + ' ' + screenReaderPageLabel | rpxTranslate">
           <span class="show-for-sr">{{ screenReaderPageLabel | rpxTranslate }} </span>
-          <span>{{ (page.label === '...') ? 'Page ' + page.label : ('Page ' + page.label | number:'') }}</span>
+          <span>{{ (page.label === '...') ? page.label : (page.label | number:'') }}</span>
         </a>
         <ng-container *ngIf="p.getCurrent() === page.value">
           <span class="show-for-sr">{{ screenReaderCurrentLabel | rpxTranslate }} </span>
-          <span>{{ (page.label === '...') ? 'Page ' + page.label : ('Page ' + page.label | number:'') }}</span>
+          <span>{{ (page.label === '...') ? page.label : (page.label | number:'') }}</span>
         </ng-container>
       </li>
       <li class="pagination-next" [class.disabled]="p.isLastPage()" *ngIf="directionLinks">
