--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/components/case-file-view-folder/case-file-view-folder.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/components/case-file-view-folder/case-file-view-folder.component.html
@@ -11,7 +11,7 @@
 </div>
 
 <div class="document-folders-header">
-  <div class="document-folders-header__title">Documents ({{ documentCount }})</div>
+  <h4 class="document-folders-header__title">Documents ({{ documentCount }})</h4>
   <div>
     <ccd-case-file-view-folder-sort
       (sortAscending)="sortDataSourceAscending($event)"
